# shulkerbox

./: Cargo.toml
cli/: Cargo.toml
cli/src/: lib.rs
common/: Cargo.toml
common/src/: config.rs  files.rs  lib.rs  server.rs
entrypoint/: Cargo.toml
entrypoint/src/: main.rs
resources/: files_urls.yaml  server.properties
webserver/: Cargo.toml
webserver/src/: config.rs  lib.rs  routing.rs  state.rs
