[package]
name = "entrypoint"
version = "0.1.0"
authors = ["Inver <jankowskipawelxd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli = { path = "../cli" }
tokio = { version = "*", features = ["full"] }