[package]
name = "entrypoint"
version = "0.1.0"
authors = ["Inver <jankowskipawelxd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
log4rs = "1.0.0"
log = "*"
cli = { path = "../cli" }
common = { path = "../common" }